feat(sweety): synchronize modern modules, kotlin dsl, conventions and test suite from aurora