@@ -1,18 +1,8 @@
+plugins { id("sweety.ksp-conventions") }
+
 dependencies {
     implementation(project(":feature:event:api"))
-
-    val processor = project(":feature:event:event-processor")
-
-    implementation(processor)
-    annotationProcessor(processor)
-
+    implementation(project(":tooling:processor"))
+    ksp(project(":tooling:ksp"))
     implementation(project(":util:thread"))
-}
-
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType<Test>().configureEach {
-    jvmArgs("--enable-preview")
 }
