@@ -1,25 +1,27 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+
 plugins {
+    id("sweety.java-conventions")
     application
+    id("com.gradleup.shadow") version "9.3.1"
+}
+
+application {
+    mainClass.set("dev.sweety.launcher.LauncherMain")
+    applicationDefaultJvmArgs = listOf("--enable-preview")
+}
+
+tasks.withType<ShadowJar>().configureEach {
+    archiveClassifier.set("all")
+    manifest { attributes["Main-Class"] = "dev.sweety.launcher.LauncherMain" }
 }
 
 dependencies {
     implementation(project(":network:netty"))
     implementation(project(":util:logger"))
-    implementation(project(":util:data"))
+    implementation(project(":util:math"))
     implementation(project(":util:thread"))
     implementation(project(":feature:module:versioning:protocol"))
-    implementation(project(":feature:asm-patch:asm-patch-core"))
+    implementation(project(":feature:asm-patch:core"))
     implementation(project(":feature:asm-patch:applier"))
-}
-
-application {
-    mainClass.set("dev.sweety.launcher.adapter.in.cli.LauncherMain")
-}
-
-tasks.named<Jar>("jar") {
-    manifest {
-        attributes["Main-Class"] = "dev.sweety.launcher.adapter.in.cli.LauncherMain"
-    }
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-    from(configurations.runtimeClasspath.get().map { if (it.isDirectory) it else zipTree(it) })
 }
