@@ -1,16 +1,7 @@
+plugins { id("sweety.java-conventions") }
+
 dependencies {
     api(project(":util:persistence:configuration"))
     implementation(project(":util:logger"))
-
-    testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.2")
 }
 
-tasks.withType<JavaCompile>().configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType<Test>().configureEach {
-    useJUnitPlatform()
-    jvmArgs("--enable-preview")
-}
